base/app.yml
#@ load("@ytt:data", "data")

#@ namespace = "demo{}".format(data.values.namespace_suffix)

apiVersion: v1
kind: Namespace
metadata:
  name: #@ namespace

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-tanzu
  name: hello-tanzu
  namespace: #@ namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-tanzu
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-tanzu
    spec:
      containers:
      - image: ghcr.io/making/hello-tanzu
        name: hello-tanzu

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-tanzu
  name: hello-tanzu
  namespace: #@ namespace
spec:
  ports:
  - name: 8080-8080
    port: 8080
  selector:
    app: hello-tanzu
